--- a/app/analyse/logement/analyse_graphique_1.html
+++ b/app/analyse/logement/analyse_graphique_1.html
@@ -37,7 +37,19 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>ANALYSER</li>
+    <li><strong>Tendances générales :</strong> Sur l'ensemble des quartiers, on observe une augmentation générale des
+        prix moyens des biens immobiliers entre 1995 et 2024. Cette hausse reflète probablement la croissance économique
+        et la demande accrue dans le marché immobilier londonien.</li>
+    <li><strong>Variations par quartier :</strong> Certains quartiers, comme Westminster et Kensington and Chelsea,
+        montrent des
+        augmentations plus marquées, probablement en raison de leur développement économique et de leur attractivité.
+        D'autres quartiers, comme Sutton, Greenwich, ou encore Croydon, présentent des évolutions plus modérées.</li>
+    <li><strong>Impact des événements économiques :</strong> Des baisses temporaires ou des ralentissements dans la
+        croissance des prix peuvent être observés autour des périodes de crises économiques, comme la crise financière
+        de 2008.</li>
+    <li><strong>Diversité des prix :</strong> Les quartiers centraux et plus prestigieux ont tendance à avoir des prix
+        moyens plus élevés que les quartiers périphériques, ce qui souligne les disparités économiques au sein de la
+        ville.</li>
 </ul>
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Utilisation du menu déroulant (Dropdown)</h3>
