--- a/app/analyse/logement/analyse_graphique_2.html
+++ b/app/analyse/logement/analyse_graphique_2.html
@@ -38,7 +38,22 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>ANALYSER</li>
+    <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
+        <li>La tendance générale montre une augmentation des ventes immobilières jusqu'aux années 2000, suivie de
+            fluctuations marquées.</li>
+        <li><strong>2008-2010 :</strong> Chute importante du nombre de ventes, probablement due à la crise financière
+            mondiale.</li>
+        <li><strong>2015 :</strong> Hausse notable des transactions, possiblement liée à des réformes fiscales ou un
+            regain d'intérêt pour certains quartiers.</li>
+        <li><strong>2020 :</strong> Forte baisse des ventes, sans doute causée par la pandémie de COVID-19 et ses
+            restrictions.</li>
+        <li><strong>Tendance globale similaire pour tous les quartiers :</strong> Bien que l'ampleur des variations
+            diffère d'un quartier à l'autre, tous suivent globalement la même évolution au fil du temps. Certains
+            quartiers enregistrent des fluctuations plus prononcées en raison de leur attractivité, de projets de
+            rénovation ou de la dynamique du marché local.</li>
+        <li>Les quartiers en pleine transformation urbaine (ex : projets de rénovation, nouvelles infrastructures)
+            affichent une hausse des ventes sur certaines périodes.</li>
+    </ul>
 </ul>
 
 
