--- a/app/analyse/logement/analyse_graphique_5.html
+++ b/app/analyse/logement/analyse_graphique_5.html
@@ -36,10 +36,28 @@
         facilitant ainsi la compréhension des relations et des répartitions entre ces éléments.</li>
 </ul>
 
-<h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations</h3>
+<h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations (Juillet 2024)</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>ANALYSER</li>
+    <li><strong>Seuls 25 % des habitants sont certains de pouvoir payer leur logement</strong>, tandis que <strong>37 %
+            pensent probablement y parvenir</strong>.</li>
+    <li><strong>31 % des personnes interrogées expriment des difficultés à payer leur logement</strong> : 21 % estiment
+        qu'elles auront probablement du mal, et 10 % sont certaines d’être en difficulté.</li>
+    <li><strong>Les locataires sociaux sont les plus touchés</strong>, représentant <strong>45 % des personnes certaines
+            d’avoir du mal à payer</strong> et <strong>32 % de celles ayant des difficultés probables</strong>.</li>
+    <li><strong>Les propriétaires ne sont pas épargnés</strong> : 29 % déclarent rencontrer des difficultés, bien que
+        leur situation soit globalement plus stable que celle des locataires.</li>
+    <li><strong>Les locataires du secteur privé ressentent aussi une forte pression</strong>, avec <strong>34 % des
+            personnes certaines d’avoir des difficultés de paiement</strong> et <strong>40 % de celles déclarant des
+            difficultés probables</strong>.</li>
+    <li><strong>8 % des répondants ne savent pas encore s’ils pourront payer leur logement</strong>, illustrant une
+        incertitude économique marquée.</li>
 </ul>
+<p style="color: #333; line-height: 1.6; margin-bottom: 20px;">
+    Ces résultats montrent que <strong>la pression financière liée au logement est une problématique persistante depuis
+        2022, sans amélioration notable au fil des trimestres</strong>.
+    Les locataires sociaux et privés restent les plus vulnérables, tandis que les propriétaires subissent eux aussi
+    l’impact de l’augmentation du coût de la vie.
+</p>
 
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Utilisation du Slider</h3>
