--- a/app/analyse/logement/analyse_graphique_6.html
+++ b/app/analyse/logement/analyse_graphique_6.html
@@ -25,7 +25,20 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>ANALYSER.</li>
+    <li><strong>Corrélation entre quartiers selon le Prix Moyen :</strong> Les corrélations très élevées entre les
+        quartiers pour le prix moyen des biens suggèrent que les tendances de prix sont similaires dans de nombreuses
+        zones de Londres. Par exemple, si le prix augmente dans un quartier central comme Kensington & Chelsea, il est
+        probable que les quartiers voisins comme Westminster ou Hammersmith & Fulham suivent la même tendance. Cela
+        reflète une dynamique de marché interconnectée, où les prix dans les quartiers prestigieux influencent ceux des
+        zones adjacentes.</li>
+    <li><strong>Corrélation entre quartiers selon le Nombre de Ventes :</strong> De même, les corrélations élevées pour
+        le nombre de logements vendus indiquent que les quartiers ont des volumes de transactions similaires. Par
+        exemple, si un quartier comme Wandsworth connaît une augmentation des ventes, il est probable que des quartiers
+        comparables comme Richmond upon Thames ou Merton suivent la même tendance. Cela pourrait être dû à des facteurs
+        économiques régionaux ou à des préférences similaires des acheteurs.</li>
+    <li><strong>Corrélation entre quartiers selon le Nombre de Logements Vacants :</strong> En revanche, les
+        corrélations pour le nombre de logements vacants semblent être moins fortes, reflétant des différences locales,
+        probablement en raison de différences dans l'attractivité ou les investissements.</li>
 </ul>
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Utilisation du "Radio item"</h3>
