--- a/app/analyse/logement/analyse_graphique_7.html
+++ b/app/analyse/logement/analyse_graphique_7.html
@@ -27,7 +27,21 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>ANALYSER.</li>
+    <li><strong>Corrélation entre Nombre de Logements Vacants et Prix Moyen :</strong> Les corrélations varient entre
+        les quartiers. Une corrélation positive suggère que les quartiers avec un nombre élevé de logements vacants ont
+        également des prix moyens plus élevés, ce qui pourrait indiquer des marchés spéculatifs ou des quartiers en
+        transition. Une corrélation négative, en revanche, pourrait indiquer que les quartiers avec plus de logements
+        vacants ont des prix plus bas, reflétant une demande moindre ou des problèmes locaux.</li>
+    <li><strong>Corrélation entre Nombre de Ventes et Nombre de Crimes :</strong> Les corrélations ici peuvent révéler
+        des relations complexes. Une corrélation positive pourrait suggérer que les quartiers avec un nombre élevé de
+        ventes ont également un nombre élevé de crimes, peut-être en raison d'une densité de population plus élevée ou
+        d'autres facteurs socio-économiques. Une corrélation négative pourrait indiquer que les quartiers avec moins de
+        crimes ont un marché immobilier plus actif, reflétant une plus grande attractivité.</li>
+    <li><strong>Corrélation entre Nombre de Crimes et Prix Moyen :</strong> Cette corrélation peut montrer comment la
+        criminalité influence les prix immobiliers. Une corrélation négative suggérerait que les quartiers avec des taux
+        de criminalité plus élevés ont des prix moyens plus bas, ce qui est souvent le cas dans les zones perçues comme
+        moins sûres. Une corrélation positive, bien que moins courante, pourrait indiquer des quartiers où d'autres
+        facteurs (comme la localisation ou les infrastructures) compensent les taux de criminalité.</li>
 </ul>
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Utilisation du "Radio item"</h3>
