--- a/app/analyse/logement/analyse_graphique_3.html
+++ b/app/analyse/logement/analyse_graphique_3.html
@@ -39,8 +39,21 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>ANALYSER.</li>
-    <li>ANALYSER</li>
+    <li><strong>Tendances générales :</strong> Sur l'ensemble des quartiers, on observe une augmentation générale du
+        ratio prix/revenus entre 1997 et 2023, indiquant une baisse de l'accessibilité du marché immobilier. Cette
+        tendance reflète probablement la hausse des prix de l'immobilier plus rapide que celle des revenus des
+        habitants.</li>
+    <li><strong>Variations par quartier :</strong> Certains quartiers, comme Westminster et Kensington & Chelsea,
+        montrent des ratios particulièrement élevés, ce qui suggère que ces zones sont moins abordables en raison de
+        leur statut de quartiers prestigieux et économiquement dynamiques. À l'inverse, des quartiers comme Barking et
+        Dagenham présentent des ratios plus faibles, indiquant une plus grande accessibilité.</li>
+    <li><strong>Impact des événements économiques :</strong> Des baisses temporaires ou des ralentissements dans
+        l'augmentation du ratio peuvent être observés autour des périodes de crises économiques, comme la crise
+        financière de 2008, où les prix de l'immobilier ont pu stagner ou baisser temporairement.</li>
+    <li><strong>Carte de l'accessibilité :</strong> La carte permet de visualiser clairement les disparités
+        géographiques en termes d'accessibilité. Les quartiers centraux et ouest de Londres sont généralement moins
+        abordables, tandis que les quartiers périphériques et est de Londres montrent des ratios plus faibles, reflétant
+        une plus grande accessibilité.</li>
 </ul>
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Utilisation du menu déroulant (Dropdown)</h3>
