--- a/app/analyse/logement/analyse_graphique_4.html
+++ b/app/analyse/logement/analyse_graphique_4.html
@@ -34,11 +34,30 @@
     <li>Les données ont été triées chronologiquement pour assurer une représentation précise des tendances.</li>
 </ul>
 
-<h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations</h3>
+<h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations et causes des logements vacants</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>ANALYSER.</li>
-    <li>ANALYSER</li>
+    <li>Le nombre de logements vacants varie considérablement d'un quartier à l'autre. Certains quartiers, notamment
+        ceux du centre de Londres, semblent être plus touchés par la vacance, souvent en raison de prix trop élevés qui
+        rendent l'accès au logement difficile ou en raison de l'activité ou l'inactivité du quartier.</li>
+    <li>Une hausse progressive du nombre de logements vacants est observée dans plusieurs quartiers, avec des
+        fluctuations marquées autour des périodes de crise économique. Ces périodes peuvent entraîner une baisse du
+        pouvoir d'achat et un ralentissement du marché immobilier.</li>
+    <li>Certains quartiers connaissent des pics de vacance prononcés, souvent liés à des stratégies de spéculation
+        immobilière, où des propriétaires préfèrent attendre une hausse des prix plutôt que de louer à un tarif plus
+        bas.</li>
+    <li>Les zones périphériques affichent généralement un taux de vacance plus faible, ce qui pourrait être dû à une
+        demande plus stable et à des logements plus abordables. De plus, certaines politiques de réhabilitation urbaine
+        semblent favoriser l'occupation des logements dans ces secteurs.</li>
+    <li>La montée des locations de courte durée pourrait expliquer la vacance de
+        certains logements, en réduisant l'offre pour les résidents permanents et en augmentant artificiellement les
+        prix.</li>
+    <li>Les logements de luxe ou inadaptés à la demande locale restent parfois inoccupés, car ils ne répondent pas aux
+        besoins des habitants qui recherchent des options plus abordables.</li>
+    <li>À l’inverse, certains quartiers montrent une baisse du nombre de logements vacants, signe d’un regain
+        d’attractivité.</li>
 </ul>
+
+
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Utilisation du menu déroulant (Dropdown)</h3>
 <p style="color: #333; line-height: 1.6; margin-bottom: 20px;">
