--- a/app/analyse/prediction/analyse_graphique_7.html
+++ b/app/analyse/prediction/analyse_graphique_7.html
@@ -62,14 +62,25 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>ANALYSER</li>
+    <li>Les clusters formés montrent une répartition géographique distincte, avec des quartiers centraux de Londres
+        souvent regroupés dans un cluster caractérisé par des prix moyens élevés et un nombre de logements vacants
+        relativement bas.</li>
+    <li>Les quartiers périphériques tendent à former des clusters distincts, souvent associés à des prix moyens plus bas
+        et un nombre de logements vacants plus élevé, reflétant des dynamiques de marché différentes.</li>
+    <li>Certains clusters montrent une corrélation entre l'abordabilité et le nombre de logements vendus, suggérant que
+        les zones plus abordables ont tendance à avoir une activité de vente plus élevée.</li>
+    <li>Les variations annuelles dans les clusters indiquent des changements dans les dynamiques du marché immobilier,
+        potentiellement influencés par des facteurs économiques, des politiques locales ou des tendances démographiques.
+    </li>
+    <li>La visualisation interactive permet d'identifier des zones spécifiques où des interventions politiques
+        pourraient être nécessaires pour réduire le nombre de logements vacants ou améliorer l'abordabilité.</li>
 </ul>
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Utilisation de la carte</h3>
-<p style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    Cette carte interactive vous permet d'explorer les clusters des quartiers en fonction du prix moyen d'une maison,
-    le nombre de logements vactants et vendus et
-    l'abordabilité. Les clusters sont représentés par des couleurs
-    distinctes, ce qui facilite l'identification des zones où la santé publique est la plus affectée par la pollution.
-    Il y a la possibilité de choisir un nobre de cluster entre 2 et 10 mais aussi une année entre 2010 et 2023.
-</p>
+<p style="color: #333; line-height: 1.6; margin-bottom: 20px;"> Cette carte interactive vous permet d'explorer les
+    clusters des quartiers en fonction du prix moyen d'une maison, le nombre de logements vacants et vendus, et
+    l'abordabilité. Les clusters sont représentés par des couleurs distinctes, ce qui facilite l'identification des
+    zones où la santé publique est la plus affectée par la pollution. Il y a la possibilité de choisir un nombre de
+    clusters entre 2 et 10 ainsi qu'une année entre 2010 et 2023. De plus, vous pouvez passer la souris sur chaque
+    quartier pour voir les caractéristiques spécifiques du cluster auquel il appartient, telles que le prix moyen des
+    maisons, le nombre de logements vacants, le nombre de logements vendus et l'indice d'abordabilité. </p>
