fautes et boutons

--- a/app/analyse/logement/analyse_graphique_2.html
+++ b/app/analyse/logement/analyse_graphique_2.html
@@ -14,7 +14,7 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Traitement des données</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>Les données ont été extraites à partir de fichiers CSV mensuelles.</li>
+    <li>Les données ont été extraites à partir de fichiers CSV mensuels.</li>
     <li>Les quartiers non pertinentsont été filtrés pour se concentrer sur les données spécifiques à chaque quartier.
     </li>
     <li>Un traitement a été effectué pour mettre la date au format correct.</li>
