--- a/app/analyse/logement/analyse_graphique_3.html
+++ b/app/analyse/logement/analyse_graphique_3.html
@@ -21,9 +21,8 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Traitement des données</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>Les données ont été extraites à partir de fichiers Exel annuels, fusionnés en un seul DataFrame pour faciliter
-        l'analyse.</li>
-    <li>Les colonnes pertinentes ont été sélectionnées, notamment le ratio Prix/Revenus</li>
+    <li>Les données ont été extraites à partir de fichiers Excel annuels.</li>
+    <li>Les colonnes pertinentes ont été sélectionnées, notamment le ratio Prix/Revenus.</li>
     <li>Les zones non pertinentes ont été filtrés pour se concentrer sur les
         données spécifiques à chaque quartier.</li>
 </ul>
@@ -32,7 +31,7 @@
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
     <li>Une visualisation en courbes (line plot) a été choisie pour représenter l'évolution du ratio par quartier.</li>
     <li>Une visualisation par carte a également été choisie pour mettre en évidence les différences d’évolution du ratio
-        entre les quartiers.</li>
+        entre les quartiers au niveau géographique.</li>
     <li>L'utilisation de données annuelles permet une analyse précise des évolutions sur une période de plus de deux
         décennies.</li>
 </ul>
