--- a/app/analyse/logement/analyse_graphique_4.html
+++ b/app/analyse/logement/analyse_graphique_4.html
@@ -13,12 +13,12 @@
     Les données proviennent du site officiel de la ville de Londres, <a href="https://data.london.gov.uk"
         target="_blank" style="color: #2196F3; text-decoration: none;">data.london.gov.uk</a>. Elles comprennent des
     informations annuelles sur le nombre de logements vacants par quartier.
-    <li>Un fichier GeoJSON des arrondissements de Londres a été utilisé pour créer des polygones géographiques.</li>
+    Un fichier GeoJSON des arrondissements de Londres a été utilisé pour créer des polygones géographiques.
 </p>
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Traitement des données</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>Les données ont été extraites à partir de fichiers Exel annuels.</li>
+    <li>Les données ont été extraites à partir de fichiers Excel annuels.</li>
     <li>Les colonnes pertinentes ont été sélectionnées, notamment le nombre de logements vacants et
         l'année.</li>
     <li>Les zones non pertinentes ont été filtrés pour se concentrer sur les
@@ -30,8 +30,7 @@
     <li>Une visualisation en courbes (line plot) a été choisie pour représenter l'évolution du nombre de véhicules par
         catégorie.</li>
     <li>Une visualisation par carte a également été choisie pour mettre en évidence les différences d’évolution entre
-        les quartiers.</li>
-    <li>Les données ont été triées chronologiquement pour assurer une représentation précise des tendances.</li>
+        les quartiers au niveau géographique.</li>
 </ul>
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Observations et causes des logements vacants</h3>
@@ -39,12 +38,9 @@
     <li>Le nombre de logements vacants varie considérablement d'un quartier à l'autre. Certains quartiers, notamment
         ceux du centre de Londres, semblent être plus touchés par la vacance, souvent en raison de prix trop élevés qui
         rendent l'accès au logement difficile ou en raison de l'activité ou l'inactivité du quartier.</li>
-    <li>Une hausse progressive du nombre de logements vacants est observée dans plusieurs quartiers, avec des
-        fluctuations marquées autour des périodes de crise économique. Ces périodes peuvent entraîner une baisse du
-        pouvoir d'achat et un ralentissement du marché immobilier.</li>
-    <li>Certains quartiers connaissent des pics de vacance prononcés, souvent liés à des stratégies de spéculation
-        immobilière, où des propriétaires préfèrent attendre une hausse des prix plutôt que de louer à un tarif plus
-        bas.</li>
+    <li>Le nombre de logements vacants diminue fortement dans plusieurs quartiers jusqu’en 2015, avant de repartir à la
+        hausse.</li>
+    <li>Certains quartiers connaissent des pics de vacance très prononcés.</li>
     <li>Les zones périphériques affichent généralement un taux de vacance plus faible, ce qui pourrait être dû à une
         demande plus stable et à des logements plus abordables. De plus, certaines politiques de réhabilitation urbaine
         semblent favoriser l'occupation des logements dans ces secteurs.</li>
@@ -53,7 +49,7 @@
         prix.</li>
     <li>Les logements de luxe ou inadaptés à la demande locale restent parfois inoccupés, car ils ne répondent pas aux
         besoins des habitants qui recherchent des options plus abordables.</li>
-    <li>À l’inverse, certains quartiers montrent une baisse du nombre de logements vacants, signe d’un regain
+    <li>À l’inverse, certains quartiers peuvent montrer une baisse du nombre de logements vacants, signe d’un regain
         d’attractivité.</li>
 </ul>
 
