--- a/app/analyse/logement/analyse_graphique_5.html
+++ b/app/analyse/logement/analyse_graphique_5.html
@@ -15,7 +15,7 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Traitement des données</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>Les données ont été extraites à partir de fichiers Exel trimestriels .</li>
+    <li>Les données ont été extraites à partir de fichiers Excel trimestriels .</li>
     <li>Les colonnes pertinentes ont été sélectionnées, notamment la proportion pour chaque sentiments.</li>
 </ul>
 
@@ -28,8 +28,6 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Justification des choix</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>La visualisation en courbes permet de mettre en évidence les variations annuelles et les tendances à long terme.
-    </li>
     <li>Une visualisation en sunburst a été choisie car elle permet de représenter de manière claire et hiérarchique la
         proportion
         de chaque sentiment en fonction des différentes catégories de personnes,
