--- a/app/analyse/logement/analyse_graphique_7.html
+++ b/app/analyse/logement/analyse_graphique_7.html
@@ -52,7 +52,8 @@
     Voici comment l'utiliser :
 </p>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li><strong>Sélectionnez un critère :</strong> Choisissez couple de critère dans la liste. Les données du graphique
+    <li><strong>Sélectionnez un critère :</strong> Choisissez un couple de critère dans la liste. Les données du
+        graphique
         seront
         automatiquement mises à jour.</li>
 </ul>
