--- a/app/analyse/prediction/analyse_graphique_7.html
+++ b/app/analyse/prediction/analyse_graphique_7.html
@@ -30,10 +30,10 @@
 
 <h3 style="color: #4CAF50; font-weight: bold; margin-bottom: 10px;">Traitement des données</h3>
 <ul style="color: #333; line-height: 1.6; margin-bottom: 20px;">
-    <li>Les données ont été extraites à partir des feuilles Excel et CSV.</li>
+    <li>Les données ont été extraites à partir de fichiers Excel et CSV.</li>
     <li>Les colonnes pertinentes (<strong>Year</strong>,<strong>Area Name</strong>, <strong>Value</strong> pour les 4
         variables) ont été
-        sélectionnées et nettoyées pour supprimer les valeurs manquantes.</li>
+        sélectionnées, fusionnées et nettoyées pour supprimer les valeurs manquantes.</li>
     <li>Un algorithme de clustering (K-means) a été appliqué pour regrouper les quartiers en fonction de ces 4
         indicateurs.</li>
     <li>Un fichier GeoJSON des arrondissements de Londres a été utilisé pour créer des polygones géographiques.</li>
